--- a/Capstone_Stage2/app/src/main/res/layout/activity_podcast_detail.xml
+++ b/Capstone_Stage2/app/src/main/res/layout/activity_podcast_detail.xml
@@ -49,7 +49,6 @@
         android:layout_gravity="center_vertical|start"
         android:layout_margin="@dimen/fab_margin"
         app:layout_anchor="@+id/podcast_detail_container"
-        app:layout_anchorGravity="top|end"
-        android:src="@drawable/baseline_add_circle_outline_white_36"/>
+        app:layout_anchorGravity="top|end"/>
 
 </android.support.design.widget.CoordinatorLayout>
