--- a/Capstone_Stage2/app/src/main/res/layout/podcast_player_widget.xml
+++ b/Capstone_Stage2/app/src/main/res/layout/podcast_player_widget.xml
@@ -1,19 +1,21 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#09C"
     android:padding="@dimen/widget_margin">
-
-    <!--<com.google.android.exoplayer2.ui.PlayerView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/podcast_exoplayer_widget"
-        android:contentDescription="@string/play_podcast_contentDescription">
-    </com.google.android.exoplayer2.ui.PlayerView>-->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:id="@+id/widget_text"/>
-
-</RelativeLayout>
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:id="@+id/widget_text_title"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:id="@+id/widget_text"/>
+    </LinearLayout>
+</ScrollView>
