--- a/BuildItBigger/app/src/main/res/layout/fragment_main.xml
+++ b/BuildItBigger/app/src/main/res/layout/fragment_main.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.udacity.android.builditbigger.MainActivityFragment">
+    tools:context="com.udacity.android.builditbigger.free.MainActivityFragment">
 
     <TextView
         android:id="@+id/instructions_text_view"
