--- a/xyz-reader/XYZReader/src/main/res/values/styles.xml
+++ b/xyz-reader/XYZReader/src/main/res/values/styles.xml
@@ -25,4 +25,8 @@
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 
+    <style name="newToolbar">
+        <item name="theme">@style/ThemeOverlay.AppCompat.Dark</item>
+        <item name="android:background">@color/deep_purple</item>
+    </style>
 </resources>
