--- a/xyz-reader/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/xyz-reader/XYZReader/src/main/res/layout/list_item_article.xml
@@ -16,8 +16,9 @@
         android:orientation="vertical">
 
         <!--suppress AndroidLintContentDescription -->
-        <com.example.xyzreader.ui.DynamicHeightNetworkImageView
+        <ImageView
             android:id="@+id/thumbnail"
+            android:adjustViewBounds="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/photo_placeholder" />
